use correct colour functions

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -57,15 +57,15 @@ $themes: ();
 @mixin add-theme($name, $primary) {
     $themes: map.merge($themes, ($name: (
         "primary": $primary, 
-        "secondary": adjust-hue($primary, 120deg), 
-        "tertiary": adjust-hue($primary, 240deg), 
+        "secondary": color.adjust($primary, $hue: 120deg), 
+        "tertiary": color.adjust($primary, $hue: 240deg), 
         "darkened-20": color.scale($primary, $lightness: -20%),
         "lightened-20": color.scale($primary, $lightness: 20%),
         "shifted-10": color-tone-shift($primary, 10%),
         "shifted-20": color-tone-shift($primary, 20%),
         "shifted-30": color-tone-shift($primary, 30%),
-        "inverted": invert($primary),
-        "complement": complement($primary), 
+        "inverted": color.invert($primary),
+        "complement": color.complement($primary), 
         "text-colour": get-contrasting-bw($primary),
         "fonts": $fonts,
         "font-size": $font-size,
