--- a/scss/_z-index.scss
+++ b/scss/_z-index.scss
@@ -8,3 +8,15 @@
         z-index: $i;
     }
 }
+
+.z-99 {
+    z-index: 99;
+}
+
+.z-999 {
+    z-index: 999;
+}
+
+.z-9999 {
+    z-index: 9999;
+}
