--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,7 @@ body {
     right: 0.1em;
     width: 0.5em;
     height: calc(100vh - 0.2em);
+    z-index: 9999;
 }
 
 .scroll-handle {
@@ -63,6 +64,7 @@ body {
     width: 100%;
     height: 10em;
     background-color: rgba(127, 127, 127, 0.7);
+    z-index: 9999;
 }
 
 .background {
