--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7769,6 +7769,18 @@
   z-index: 10;
 }
 
+.z-99 {
+  z-index: 99;
+}
+
+.z-999 {
+  z-index: 999;
+}
+
+.z-9999 {
+  z-index: 9999;
+}
+
 p, span, a, select, option, .link {
   font-size: 1rem;
   margin-top: 0.5em;
@@ -10493,6 +10505,7 @@ body {
   right: 0.1em;
   width: 0.5em;
   height: calc(100vh - 0.2em);
+  z-index: 9999;
 }
 
 .scroll-handle {
@@ -10503,6 +10516,7 @@ body {
   width: 100%;
   height: 10em;
   background-color: rgba(127, 127, 127, 0.7);
+  z-index: 9999;
 }
 
 .background {
