--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 @use "sass:map";
 @use "sass:color";
 
+$screen-width-xl: 1600px;
 $screen-width-large: 1200px;
 $screen-width-medium: 900px;
 $screen-width-small: 700px;
